More dumb spelling corrections

--- a/komodo/komodo.env
+++ b/komodo/komodo.env
@@ -18,8 +18,8 @@ KOMODO_PASSKEY: [[KOMODO_PASSKEY]]
 KOMODO_DB_USERNAME: [[KOMODO_DB_USERNAME]]
 KOMODO_DB_PASSWORD: [[KOMODO_DB_PASSWORD]]
 
-SOCKET_PROXY_VERSION: [[GLOBAL_SOCKET_PROXY_VESION]]
-KOMODO_VERSION: [[GLOBAL_KOMODO_VESION]]
+SOCKET_PROXY_VERSION: [[GLOBAL_SOCKET_PROXY_VERSION]]
+KOMODO_VERSION: [[GLOBAL_KOMODO_VERSION]]
 TRAEFIK_NETWORK: [[GLOBAL_TRAEFIK_NETWORK]]
 
 ## Global Settings
