--- a/komodo/compose.yaml
+++ b/komodo/compose.yaml
@@ -39,13 +39,13 @@ x-environment: &default-environment
   PGID: ${PGID:-1000}
  
 # Compose Project Name
-name: komodo
+name: ${PROJECT_NAME}
 
 services:
   postgres:
     <<: [*default-usage, *default-restart, *default-logging]
     image: ghcr.io/ferretdb/postgres-documentdb:17
-    container_name: ${COMPOSE_PROJECT_NAME}-${SERVER_NAME}-postgres
+    container_name: ${PROJECT_NAME}.postgres
     # ports:
     #   - 5432:5432
     environment:
@@ -66,7 +66,7 @@ services:
   ferretdb:
     <<: *default-base
     image: ghcr.io/ferretdb/ferretdb:2.7
-    container_name: ${COMPOSE_PROJECT_NAME}-${SERVER_NAME}-ferretdb
+    container_name: ${PROJECT_NAME}.ferretdb
     # ports:
     #   - 27017:27017
     environment:
@@ -90,8 +90,8 @@ services:
   core:
     <<: *default-base
     image: ghcr.io/moghtech/komodo-core:${COMPOSE_KOMODO_VERSION:-latest}
-    hostname: ${COMPOSE_PROJECT_NAME}-${SERVER_NAME}.${DOMAIN_NAME}
-    container_name: ${COMPOSE_PROJECT_NAME}-${SERVER_NAME}
+    hostname: ${PROJECT_NAME}.${SERVER_NAME}.${SUB_DOMAIN_NAME}${DOMAIN_NAME}  
+    container_name: ${PROJECT_NAME}
     ports:
       - 9120:9120
     environment:
@@ -101,7 +101,7 @@ services:
       KOMODO_DATABASE_PASSWORD: ${KOMODO_DB_PASSWORD}
       KOMODO_PASSKEY: ${KOMODO_PASSKEY}
       KOMODO_TITLE: ${KOMODO_TITLE:-Komodo}
-      KOMODO_HOST: ${COMPOSE_PROJECT_NAME}.${DOMAIN_NAME}
+      KOMODO_HOST: ${PROJECT_NAME}.${SUB_DOMAIN_NAME}${DOMAIN_NAME}   
     volumes:
       - ./komodo-config/core.config.toml:/config/config.toml:ro
       - ./komodo-data/backups:/backups
@@ -111,9 +111,13 @@ services:
       - "traefik.enable=true"
       - "traefik.docker.network=${TRAEFIK_NETWORK}"
         ## HTTP Routers
-      - "traefik.http.routers.$COMPOSE_PROJECT_NAME-rtr.rule=Host(`${COMPOSE_PROJECT_NAME}.${DOMAIN_NAME}`) || Host(`${COMPOSE_PROJECT_NAME}-${SERVER_NAME}.${DOMAIN_NAME}`)"
+      - "traefik.http.routers.$PROJECT_NAME-rtr.rule=
+        Host(`${SERVICE_NAME}.${DOMAIN_NAME}`) ||
+        Host(`${SERVICE_NAME}.${SUB_DOMAIN_NAME}${DOMAIN_NAME}`) ||
+        Host(`${SERVICE_NAME}.${SERVER_NAME}.${SUB_DOMAIN_NAME}${DOMAIN_NAME}`) ||
+        Host(`${PROJECT_NAME}.${SERVER_NAME}.${SUB_DOMAIN_NAME}${DOMAIN_NAME}`)"
         ## HTTP Services
-      - "traefik.http.services.$COMPOSE_PROJECT_NAME-svc.loadbalancer.server.port=9120"
+      - "traefik.http.services.$PROJECT_NAME-svc.loadbalancer.server.port=9120"
       ## Komodo Labels
       - "komodo.skip" # Prevent Komodo from stopping with StopAllContainers
     networks:
@@ -134,14 +138,14 @@ services:
 volumes:
   # Postgres
   postgres-data:
-    name: ${COMPOSE_PROJECT_NAME}_postgres_data
+    name: ${PROJECT_NAME}_postgres_data
   # FerretDB
   ferretdb-state:
-    name: ${COMPOSE_PROJECT_NAME}_ferretdb_data
+    name: ${PROJECT_NAME}_ferretdb_data
 
 networks:
   frontend:
-    name: traefik_public
+    name: ${TRAEFIK_NETWORK}
     external: true
   backend:
     internal: true
