--- a/komodo/komodo.env
+++ b/komodo/komodo.env
@@ -28,7 +28,7 @@ KOMODO_DB_PASSWORD: [[KOMODO_DB_PASSWORD]]
 
 SOCKET_PROXY_VERSION: [[GLOBAL_SOCKET_PROXY_VERSION]]
 KOMODO_VERSION: [[GLOBAL_KOMODO_VERSION]]
-TRAEFIK_NETWORK: [[GLOBAL_TRAEFIK_NETWORK]]
+PROXY_NETWORK: [[GLOBAL_PROXY_NETWORK]]
 
 ## Global Settings
 # Environment Settings
