--- a/komodo.env
+++ b/komodo.env
@@ -11,9 +11,9 @@
 ################################################################
 ## Container Specific Settings
 # Easy to remember name of service from the stack. (e.g. "dns", "proxy", "logs")
-SERVICE_NAME:
+SERVICE_NAME: komodo
 # Name of the project of the primary containers in the stack.
-PROJECT_NAME: 
+PROJECT_NAME: komodo
 # Hostname of server stack runs on
 SERVER_NAME: 
 # Include a trailing "." if SUB_DOMAIN_NAME field is used. (e.g. "cloud.")
